tests/neg-custom-args/captures/delayedRunops.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/delayedRunops.scala:12:4 ---------------------------------
12 |    () => // error
   |    ^
   |    Found:    () ->{c} Unit
   |    Required: () -> Unit
   |
   |    Note that capability `c` cannot flow into capture set {}.
   |
13 |      val ops1: List[() ->{c} Unit] = ops
14 |      runOps(ops1)
   |
   | longer explanation available when compiling with `-explain`
